--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
 <body>
     <h1>Every Aimmy Model</h1>
-    <input type="text" id="search" placeholder="Search..." onkeyup="search()">
+    <input type="text" id="search" placeholder="Search... (ex. !unique)" onkeyup="search()">
     <p id="count"></p>
     <div id="files">
 
