--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aimmy Models</title>
 
-    <meta property="og:title" content="Aimmy Models">
-    <meta property="og:description" content="A collection of models for Aimmy.">
+    <meta property="og:title" content="Aimmy Models & Configs">
+    <meta property="og:description" content="A collection of models & Configs for Aimmy.">
     <meta property="og:url" content="https://github.com/whoswhip/aimmy-models">
 </head>
 <style>
