--- a/index.html
+++ b/index.html
@@ -129,16 +129,15 @@
 
         document.getElementById("files").innerHTML = "";
         filteredFiles.forEach(file => {
-            let modelUrl = file.download_url;
-            let modelName = file.name;
-            let modelType = file.type;
-            let modelSize = formatBytes(file.size);
-            let modelPath = file.path;
-            let modelHtml = `<a href="${modelUrl}">${modelName} (${modelType}) - ${modelSize}</a>`;
-            let modelElement = document.createElement("p");
+            let fileUrl = file.download_url;
+            let fileName = file.name;
+            let fileSize = formatBytes(file.size);
+            let modelHtml = `<a href="${fileUrl}" style="display:flex;"><span style="width: 80%; display: inline-block;">${fileName}</span>  <span style="width: 20%; text-align: right; margin-left: auto; display: inline-block;">${fileSize}</span></a>`;
+            let modelElement = document.createElement("li");
+            modelElement.className = "file-item";
             modelElement.innerHTML = modelHtml;
             document.getElementById("files").appendChild(modelElement);
-            document.getElementById("count").innerHTML = `Total: ${filteredFiles.length}`;
+            document.getElementById("count").innerHTML = `${filteredFiles.length} ${type.charAt(0).toUpperCase() + type.slice(1)}`;
         });
     }
 
